Decrease lr. Modify augmentation

--- a/segmentation_modern.ipynb
+++ b/segmentation_modern.ipynb
@@ -69,14 +69,14 @@
     "    train_transform = [\n",
     "        albu.RandomScale(),\n",
     "        albu.ToGray(),                \n",
-    "        albu.PadIfNeeded(min_height=960, min_width=960, always_apply=True, border_mode=0),\n",
-    "        albu.RandomCrop(height=960, width=960, always_apply=True),\n",
+    "        albu.PadIfNeeded(min_height=640, min_width=640, always_apply=True, border_mode=0),\n",
+    "        albu.RandomCrop(height=640, width=640, always_apply=True),\n",
     "    ]\n",
     "    return albu.Compose(train_transform)\n",
     "    \n",
     "def get_validation_augmentation():\n",
     "    test_transform = [\n",
-    "        albu.PadIfNeeded(1216, 1216)\n",
+    "        albu.Resize(height=640, width=640)\n",
     "    ]\n",
     "    return albu.Compose(test_transform)\n",
     "\n",
