--- a/segmentation_modern.ipynb
+++ b/segmentation_modern.ipynb
@@ -68,15 +68,16 @@
     "def get_training_augmentation():\n",
     "    train_transform = [\n",
     "        albu.RandomScale(),\n",
-    "        albu.ToGray(),                \n",
-    "        albu.PadIfNeeded(min_height=640, min_width=640, always_apply=True, border_mode=0),\n",
-    "        albu.RandomCrop(height=640, width=640, always_apply=True),\n",
+    "        albu.ToGray(),\n",
+    "        albu.ColorJitter(),\n",
+    "        albu.PadIfNeeded(min_height=960, min_width=960, always_apply=True, border_mode=0),\n",
+    "        albu.RandomCrop(height=960, width=960, always_apply=True),\n",
     "    ]\n",
     "    return albu.Compose(train_transform)\n",
     "    \n",
     "def get_validation_augmentation():\n",
     "    test_transform = [\n",
-    "        albu.Resize(height=640, width=640)\n",
+    "        albu.Resize(height=960, width=960)\n",
     "    ]\n",
     "    return albu.Compose(test_transform)\n",
     "\n",
@@ -240,7 +241,7 @@
     "\n",
     "# 最適化関数\n",
     "optimizer = torch.optim.Adam([ \n",
-    "    dict(params=model.parameters(), lr=0.0001),\n",
+    "    dict(params=model.parameters(), lr=0.00005),\n",
     "])"
    ]
   },
