--- a/yolov5_train.ipynb
+++ b/yolov5_train.ipynb
@@ -36,15 +36,6 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": 12,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "os.chdir(\"/workspace\")"
-            ]
-        },
-        {
             "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
@@ -59,7 +50,7 @@
             "outputs": [],
             "source": [
                 "mode = \"modern\"\n",
-                "use_yolo_pretrained = False"
+                "use_trained_weights = False"
             ]
         },
         {
@@ -376,15 +367,20 @@
                 }
             ],
             "source": [
-                "if mode == \"modern\":    \n",
-                "    data_path=\"/home/fummicc1/codes/signate/modern_book.yaml\"\n",
-                "    if not use_yolo_pretrained:\n",
-                "        weight_path=\"/home/fummicc1/codes/signate/yolov5x6.pt\"\n",
-                "    else:\n",
-                "        weight_path=\"/home/fummicc1/codes/signate/yolo_modern_weights-base.pt\"\n",
-                "    out_path=\"/home/fummicc1/codes/signate/results/train_modern_book_yolov5\"\n",
-                "    command = f\"cd yolov5 && python train.py --img 800 --epochs 40 --data {data_path} --batch-size 8 --weights {weight_path} --project {out_path} --device 0,1,2,3\"\n",
-                "    subprocess.run(command, shell=True)"
+                "if mode == \"modern\":\n",
+                "    kfolds = 4\n",
+                "    for i in range(2, kfolds):\n",
+                "        if i > 1:\n",
+                "            use_trained_weights = True\n",
+                "        data_path=f\"/home/fummicc1/codes/signate/modern_book_kfold{i}.yaml\"\n",
+                "        if not use_trained_weights:\n",
+                "            weight_path=\"/home/fummicc1/codes/signate/yolov5x6.pt\"\n",
+                "        else:\n",
+                "            weight_path=\"/home/fummicc1/codes/signate/yolo_modern_weights-base.pt\"\n",
+                "        out_path=\"/home/fummicc1/codes/signate/results/train_modern_book_yolov5\"\n",
+                "        command = f\"cd yolov5 && python train.py --img 800 --epochs 30 --data {data_path} --batch-size 8 --weights {weight_path} --project {out_path} --device 0,1,2,3\"\n",
+                "        subprocess.run(command, shell=True)\n",
+                "        break"
             ]
         },
         {
@@ -394,15 +390,19 @@
             "outputs": [],
             "source": [
                 "if mode == \"old\":\n",
-                "    data_path=\"/home/fummicc1/codes/signate/old_book.yaml\"\n",
-                "    \n",
-                "    if not use_yolo_pretrained:\n",
-                "        weight_path=\"/home/fummicc1/codes/signate/yolov5x6.pt\"\n",
-                "    else:\n",
-                "        weight_path=\"/home/fummicc1/codes/signate/yolo_old_weights-base.pt\"\n",
-                "    out_path=\"/home/fummicc1/codes/signate/results/train_old_book_yolov5\"\n",
-                "    command = f\"cd yolov5 && python train.py --img 800 --epochs 40 --data {data_path} --batch-size 8 --weights {weight_path} --project {out_path} --device 0,1,2,3\"\n",
-                "    subprocess.run(command, shell=True)"
+                "    kfolds = 4\n",
+                "    for i in range(1, kfolds):\n",
+                "        if i > 1:\n",
+                "            use_trained_weights = True\n",
+                "        data_path=f\"/home/fummicc1/codes/signate/old_book_kfold{i}.yaml\"\n",
+                "        if not use_trained_weights:\n",
+                "            weight_path=\"/home/fummicc1/codes/signate/yolov5x6.pt\"\n",
+                "        else:\n",
+                "            weight_path=\"/home/fummicc1/codes/signate/yolo_old_weights-base.pt\"        \n",
+                "        out_path=\"/home/fummicc1/codes/signate/results/train_old_book_yolov5\"\n",
+                "        command = f\"cd yolov5 && python train.py --img 800 --epochs 30 --data {data_path} --batch-size 8 --weights {weight_path} --project {out_path} --device 0,1,2,3\"\n",
+                "        subprocess.run(command, shell=True)\n",
+                "        break"
             ]
         }
     ],
