--- a/yolov5_train.ipynb
+++ b/yolov5_train.ipynb
@@ -49,8 +49,30 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "mode = \"modern\"\n",
+                "mode = \"all\"\n",
                 "use_trained_weights = False"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "if mode == \"all\":\n",
+                "    kfolds = 4\n",
+                "    for i in range(1, kfolds):\n",
+                "        if i > 1:\n",
+                "            use_trained_weights = True\n",
+                "        data_path=f\"/home/fummicc1/codes/signate/book_kfold{i}.yaml\"\n",
+                "        if not use_trained_weights:\n",
+                "            weight_path=\"/home/fummicc1/codes/signate/yolov5x6.pt\"\n",
+                "        else:\n",
+                "            weight_path=\"/home/fummicc1/codes/signate/yolo_all_weights-base.pt\"\n",
+                "        out_path=\"/home/fummicc1/codes/signate/results/train_all_book_yolov5\"\n",
+                "        command = f\"cd yolov5 && python train.py --img 800 --epochs 30 --data {data_path} --batch-size 8 --weights {weight_path} --project {out_path} --device 0,1,2,3\"\n",
+                "        subprocess.run(command, shell=True)\n",
+                "        break"
             ]
         },
         {
@@ -369,7 +391,7 @@
             "source": [
                 "if mode == \"modern\":\n",
                 "    kfolds = 4\n",
-                "    for i in range(2, kfolds):\n",
+                "    for i in range(1, kfolds):\n",
                 "        if i > 1:\n",
                 "            use_trained_weights = True\n",
                 "        data_path=f\"/home/fummicc1/codes/signate/modern_book_kfold{i}.yaml\"\n",
